First Stable Version 1.0.13

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="title_activity_upload_gallery">UploadGalleryActivity</string>
     <string-array name="types_array">
         <item>All</item>
-        <item>Clubs</item>
+        <item>Clubs/Bars</item>
         <item>CafeBars</item>
         <item>Tsipouradika</item>
     </string-array>
